--- a/Travel App/travel_app/pubspec.yaml
+++ b/Travel App/travel_app/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.6.1
-
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
+  http: ^0.13.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
